Created the method to export Biblbioteca to PDF. Added the dependency pdfbox, still refactoring the code.