@@ -1,22 +1,24 @@
 package es.etg.dam.tfg.programa.utils;
 
 import es.etg.dam.tfg.programa.modelo.Videojuego;
-import es.etg.dam.tfg.programa.modelo.Consola;
+
 
 import java.util.Comparator;
 import java.util.List;
-import java.util.stream.Collectors;
+
 
 public class FiltroVideojuego {
 
-    public static List<Videojuego> filtrarYOrdenar(List<Videojuego> juegos, String nombre, Consola consola, String genero, String orden) {
+    public static List<Videojuego> filtrarYOrdenar(List<Videojuego> juegos, String nombre, String nombreConsola,
+            String genero, String orden) {
         return juegos.stream()
-                .filter(j -> nombre == null || j.getNombre().toLowerCase().contains(nombre.toLowerCase()))
-                .filter(j -> consola == null || j.getConsolas().contains(consola))
+                .filter(j -> nombre == null || nombre.isBlank() || j.getNombre().toLowerCase().contains(nombre))
+                .filter(j -> nombreConsola == null || nombreConsola.equals("Todas") ||
+                        j.getConsolas().stream().anyMatch(c -> c.getNombre().equalsIgnoreCase(nombreConsola)))
                 .filter(j -> genero == null || genero.equals("Todos") ||
                         j.getGeneros().stream().anyMatch(g -> g.getNombre().equalsIgnoreCase(genero)))
                 .sorted(obtenerComparador(orden))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private static Comparator<Videojuego> obtenerComparador(String orden) {
@@ -29,4 +31,3 @@ public class FiltroVideojuego {
         };
     }
 }
-
